
package local_feature_test;

import "ProtoFeatures.proto";

//This is a demonstration of features only present in ProtoBuf Code Generator
message local_features
{
    //Make class field of type TimeSpan, serialized to Ticks
    required int64 Uptime = 1;
    
    //Make class field of type DateTime, serialized to Ticks
    required int64 DueDate = 2;
    
    //Do not generate class field, must be implemented in other partial class
    required double Amount = 3;
    
    //Custom field access types. Default: public
    optional string Denial = 4;
    optional string Secret = 5;
    optional string Internal = 6;
    optional string PR = 7;
    
    //Generate a c# readonly field
    optional proto_test.my_message_v1 testing_read_only = 8;
    
    //When deserializing this one must be set to a class before
    required interface_test MyInterface = 9;
    optional struct_test MyStruct = 10;
    optional external_struct MyExtStruct = 11;
    optional external_class MyExtClass = 12;
}

//Testing local struct serialization
message interface_test
{
}

//Testing local struct serialization
message struct_test
{
}

//Testing external struct serialization
message external_struct
{
    optional double X = 1;
}


//External sealed class test, we have no posibility to modify this one
message external_class
{
    optional int32 A = 1;
}
